fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
-body{
-  overflow: hidden;
-}
+
 @font-face {
   font-family: Montserrat-Regular;
   src: url('../fonts/Montserrat/Montserrat-Regular.ttf'); 
